# dcs-pylot-dash

./: .dockerignore  .github-license-api-cache.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COPYRIGHT  Dockerfile  LICENSE  README.md  SECURITY.md  build-image.sh  build-ui.sh  build.sh  generate-attribution-for-sbom.sh  generate-attribution.sh  generate-attributions.sh  generate-sboms.sh  package.json  pnpm-lock.yaml  privacy_policy.md  pyproject.toml  sync-versions.sh  terms_of_service.md  third_party_licenses.txt  third_party_licenses_distributed.txt
.envs/: dev-ui.env  dev.env  prod-container.env
dcs-pylot-dash-ui/: README.md  angular.json  package.json  pnpm-lock.yaml  tsconfig.app.json
dcs-pylot-dash-ui/src/: index.html  main.ts  proxy.conf.json  styles.css
dcs-pylot-dash-ui/src/app/: api-model.ts  api-routes.ts  api-source-model-service.ts  app-metadata-service.ts  app.config.ts  app.css  app.html  app.routes.ts  app.ts  constants.ts  editor-model-service.ts  editor-model.ts  generator-service.ts  local-storage-service.ts  notices-service.ts  sample-model.service.ts  source-data-point-service.ts  status-message-service.ts  user-data-service.ts
dcs-pylot-dash-ui/src/app/backend-status-messages/: backend-status-messages.css  backend-status-messages.html  backend-status-messages.ts
deployment/dcs-pylot-dash/: Chart.yaml  values.yaml
deployment/dcs-pylot-dash/templates/: NOTES.txt  deployment.yaml  ingress.yaml  service.yaml
misc/: global_symbols.txt  gps_converters.lua  sample_export_model_old_with_colorscale.json
resources/external_models/: external_model_default.json
resources/sample_export_models/: sample_api_export_model.json
resources/static/: robots.txt  security.txt
resources/templates/: export.lua.template  gps_converters.lua  main.lua.template  readme.template.txt  template.main.html
sboms/: sbom-api-dev.json  sbom-api-prod.json  sbom-api.json  sbom-dev.json  sbom-distributed.json  sbom-prod.json  sbom-ui-prod.json  sbom-ui.json  sbom.json
src/dcs_pylot_dash/: app.py  app_exception_handlers.py  app_settings.py  exceptions.py  log_formatter.py  logging.yaml  main.py
src/dcs_pylot_dash/api/: api_model.py  api_routes.py  foo.py  main_router.py
src/dcs_pylot_dash/service/: __init__.py  api_model_export_service.py  app_metadata_service.py  dcs_common_data_types.py  dcs_model_external.py  dcs_model_internal.py  export_model.py  generator_service.py  html_ui_generator.py  lua_generator.py  notice_service.py  resource_provider.py  source_model_service.py  string_utils.py  units.py
src/dcs_pylot_dash/utils/: resource_provider.py
tests/: test_api_model.py  test_app.py  test_html_generator.py  test_lua_generator.py  test_model_external.py  test_model_internal.py  test_string_utils.py  test_unit_converter.py
tests/data/: export_model_3.json  test.env
tests/output/: DCSPylotDash.lua  Export.lua  PyDcsExport.lua  main.html
tools/copyright_header/: logging.yaml  main.py
tools/copyright_header/extensions/: css  html  py  ts
tools/copyright_header/tests/: test_copyright_header.py
tools/sbom_to_oss_attrib/: attribution.py  attribution_generator.py  attribution_output.py  cyclonedx_sbom.py  github_api.py  logging.yaml  main.py  test_sbom_to_oss_attrib.py  utils.py
(+49 files in other folders)
