[project]
name = "dcs-pylot-dash"
version = "0.1.0"
description = "A live data export script and dashboard generator for DCS"
license-files = ["LICENSE"]
authors = [
    { name = "Kevin Rzepka", email = "kdev@posteo.com" }
]
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "PyYAML==6.0.3",
    "fastapi==0.123.5",
    "uvicorn==0.38.0",
    "httpx==0.28.1"
]

[dependency-groups]
cyclonedx = [
    "cyclonedx-bom==7.2.1"
]
dev = [
    "pip==25.3",
    "pre-commit==4.5.0",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "coverage==7.12.0",
]


[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
log_cli = "true"
# this overrides the setting of 'root' in logging.yaml
# removing it also removes logs when running with pycharm?
# log_cli_level = "info"
asyncio_mode = "auto"


[tool.uv]
python-preference = "only-system"