[project]
name = "dcs-pylot-dash"
version = "1.1.0"
description = "A live telemetry data export script and dashboard generator for DCS"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kevin Rzepka", email = "kdev@posteo.com" }
]
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "PyYAML==6.0.3",
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "httpx[http2]==0.28.1",
    "pydantic-settings==2.12.0"
]

[project.urls]
Repository = "https://github.com/kevinrzepka/dcs-pylot-dash.git"
Issues = "https://github.com/kevinrzepka/dcs-pylot-dash/issues"

[dependency-groups]
cyclonedx = [
    "cyclonedx-bom==7.2.1"
]
dev = [
    "pip==25.3",
    "black==26.1.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "coverage==7.13.2",
]


[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
log_cli = "true"
# this overrides the setting of 'root' in logging.yaml
# removing it also removes logs when running with pycharm?
# log_cli_level = "info"
asyncio_mode = "auto"

[tool.uv]
python-preference = "only-system"

[tool.black]
line-length = 120
